# VulnFinder

./: Cargo.toml  README.md
.github/workflows/: ci.yml
crates/vulnfinder-cli/: Cargo.toml
crates/vulnfinder-cli/src/: main.rs
crates/vulnfinder-core/: Cargo.toml
crates/vulnfinder-core/src/: cve_db.rs  error.rs  fingerprint.rs  lib.rs  output.rs  ports.rs  scanner.rs  target.rs
crates/vulnfinder-core/tests/: fingerprint_integration.rs
data/: cve_db.json
