[package]
name = "vulnfinder"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "vulnfinder"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
thiserror.workspace = true
indicatif.workspace = true
ratatui.workspace = true
crossterm.workspace = true
chrono.workspace = true
vulnfinder-core = { path = "../vulnfinder-core" }
