[package]
name = "vulnfinder-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
ipnet.workspace = true
regex.workspace = true
semver.workspace = true
futures.workspace = true
native-tls.workspace = true
tokio-native-tls.workspace = true
x509-parser.workspace = true

[dev-dependencies]
tokio.workspace = true
